feat: readme added

--- a/docker/non-production/docker-compose.yml
+++ b/docker/non-production/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8004:8000"
     restart: always
-    command: /bin/sh -c "while sleep 1000; do :; done"
+    command: /bin/sh -c "python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - vr_sql
     volumes:
